got scrap working with handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <h1> NFL News </h1>
-{{#each headline}}
+{{#each headlines}}
 <div id="articles">
     <h3> {{title}} </h3>
 </div>
@@ -7,3 +7,5 @@
 <p> {{summary}}</p>
 <a href ={{link}}> Read More! </a>
 {{/each}}
+
+Hello!!
