adding homepage before scrape

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,5 @@
 <h1> NFL News </h1> 
-<a href="/saved"> View Your Saved Articles </a>
-<hr>
-{{#each headlines}}
-<div id="articles">
-    <h5> {{title}} </h5>
-</div>
+<a href="/saved" class="btn btn-success"> View Your Saved Articles </a>
+<a href="/articles" class="btn btn-success"> Scrape Articles </a>
 
-<p> {{summary}}
-<a href ={{link}}> Read More! </a>
-</p>
- <button class="btn btn-success save" data-id="{{id}}"> Save this article! </button>
- <br>
- <br>
-{{/each}}
 
