--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,10 @@
-<h1> NFL News </h1> 
-<a href="/saved" class="btn btn-success"> View Your Saved Articles </a>
-<a href="/articles" class="btn btn-success"> Scrape Articles </a>
+<h1 class="text-center"> NFL News </h1> 
 
+<div class="col text-center"> 
+<a href="/saved" class="btn btn-success center"> View Your Saved Articles </a>
+<a href="/articles" class="btn btn-success"> Scrape Articles </a>
+</div>
+<br>
+<br>
+    <img src="/images/field.jpg" width="100%">
 
