delete button working

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -20,7 +20,7 @@
               
               
 {{#each note}}
-<p>  {{body}}   <button class="btn btn-danger deletenote" data-id="{{id}}"> X </button> </p> 
+ {{body}}   <button class="btn btn-danger deletenote" data-id="{{id}}"> X </button> 
 {{/each}}
 
  {{/if}}
