--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 <div class="col text-center"> 
 <a href="/saved" class="btn btn-success center"> View Your Saved Articles </a>
-<a href="/articles" class="btn btn-success"> Scrape Articles </a>
+<a href="/scrape" class="btn btn-success"> Scrape Articles </a>
 </div>
 <br>
 <br>
