--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -1,3 +1,5 @@
+
+<div class="container">
 <h1> NFL News </h1> 
 <a href="/saved"> View Your Saved Articles </a>
 <hr>
@@ -13,3 +15,4 @@
  <br>
  <br>
 {{/each}}
+</div>
