--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1 class="text-center"> NFL News </h1> 
 
 <div class="col text-center"> 
@@ -8,3 +10,4 @@
 <br>
     <img src="/images/field.jpg" width="100%">
 
+</div>
