--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1> Saved NFL Articles </h1>
 {{#each headlines}}
 {{#if saved}}
@@ -26,3 +28,4 @@
  {{/if}}
 {{/each}}
 
+</div>
